Thu May 16 02:03:39 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/depend: Add a dependency for ifaddr.o.

Thu May 16 01:44:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (verconf.h): $< cannot be used in explicit rules with
	  nmake.

	* win32/Makefile.sub (CONFIG_H): create verconf.in instead of
	  verconf.h.

Thu May 16 01:25:07 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: only emit warnings when
	  -w is enabled.

Wed May 15 18:58:17 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj): rename to `newobj_of' and accept additional
	  three parameters v1, v2, v3. newobj_of() do OBJSETUP() and
	  fill values with v1, v2, v3.

	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc):
	  use newobj_of().

Wed May 15 17:55:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_PLATFORM): move to config.h as needed by
	  version.c.

Wed May 15 17:04:11 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: add an additional RGENGC_PROFILE mode (2).
	  Profiling result can be check by GC.stat.

	* gc.c (type_name): separate from obj_type_name().

Wed May 15 16:58:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: save configured load path values into verconf.in.

	* common.mk (verconf.h): create from verconf.in with shvar_to_cpp.rb.

	* tool/shvar_to_cpp.rb: turn shell variables into C macros.
	  [Bug #7959]

	* loadpath.c: split load path staffs from version.c.

	* dmyloadpath.c: miniruby has no builtin load paths, so verconf.h is
	  not needed.

Wed May 15 03:56:09 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: adding backwards
	  compatible YAMLTree.new method

Wed May 15 02:22:16 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: Adding Psych.safe_load for loading a user
	  defined, restricted subset of Ruby object types.
	* ext/psych/lib/psych/class_loader.rb: A class loader for