@@ -1,3 +1,7 @@
+Thu May 16 03:05:45 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_node_newnode): use newobj_of() instead of rb_newobj().
+
 Thu May 16 02:03:39 2013  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/depend: Add a dependency for ifaddr.o.
